--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "2barrels",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "http://rlnB2022.github.io/twobarrels",
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -21,6 +22,8 @@
 	},
 	"scripts": {
 		"start": "react-scripts --openssl-legacy-provider start",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -42,5 +45,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^5.0.0"
 	}
 }
